--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "NODEJS",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "Daniel Fernando <daniel_fmpc@hotmail.com.br>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon"
+  },
   "dependencies": {
     "express": "^4.17.1"
   },
